/* Verholding mit 't Nederlaands */

--- a/Graofschopper_plat.mw
+++ b/Graofschopper_plat.mw
@@ -27,7 +27,7 @@ In 't zuudwesten van de Graofschop, bi'j [[Gildehaus|Gildehoes]], hej nog 't ver
 
 == Verholding mit 't Nederlaands ==
 [[Ofbeelding:Deutschland Emlichheim Reformierte Kirche.JPG|300px|left|thumb|De ''reformierte'' karke (dizzend stiet op Emmelkamp) hef een grote rolle speuld bi'j de verbreiding van 't Nederlaands in de Graofschop Benthem.]]
-De Graofschop Benthem stapten in 1588 oaver op 't [[calvinisme]]. Umdebi'j 't jaor 1650 naamp 't Nederlaands de stee in van 't Duuts as karketaal (in de ''reformierte'' karke), schoeltaal en schrieftaal. Ok de Benthemer oaverheid gebruukten eeuwenlaank 't Nederlaands. De mèensen sprakken daorumme zowal Platduuts as Nederlaands, waorbi'j de leste taal de eerste beïnvloedden. Doe vanof de zeuventiende eeuw Oost-Nederlaand Hollaandser van taal begunden te wörden, kwammen d'r - bename nao 1680 - beveurbield via de haandelsstad Zwolle en oaver de revier de Vechte Hollaandse woorden in de Bentheimer streektaal.<ref>A. C. F. Koch, Jaap Kruisheer en J. C. Bedaux (1992). ''Tussen Vlaanderen en Saksen: uit de verspreide geschiedkundige geschriften van A.C.F. Koch (1923-1990)''. Uitgeverij Verloren. Blz. 187</ref> De Nederlaandse invloed op 't Nedersaksisch hef in de Graofschop nog groter ewest as in de Duutse grèensregio [[Oostfraislaand|Oostfrieslaand]].
+De Graofschop Benthem stapten in 1588 oaver op 't [[calvinisme]]. Umdebi'j 't jaor 1650 naamp 't Nederlaands de stee in van 't Duuts as karketaal (in de ''reformierte'' karke), schoeltaal en schrieftaal. Ok de Benthemer oaverheid gebruukten eeuwenlaank 't Nederlaands. De hogere luu sprakken daorumme zowal Platduuts as Nederlaands, waorbi'j de leste taal de eerste beïnvloedden. Doe vanof de zeuventiende eeuw Oost-Nederlaand Hollaandser van taal begunden te wörden, kwammen d'r - bename nao 1680 - beveurbield via de haandelsstad Zwolle en oaver de revier de Vechte Hollaandse woorden in de Bentheimer streektaal.<ref>A. C. F. Koch, Jaap Kruisheer en J. C. Bedaux (1992). ''Tussen Vlaanderen en Saksen: uit de verspreide geschiedkundige geschriften van A.C.F. Koch (1923-1990)''. Uitgeverij Verloren. Blz. 187</ref> De Nederlaandse invloed op 't Nedersaksisch hef in de Graofschop nog groter ewest as in de Duutse grèensregio [[Oostfraislaand|Oostfrieslaand]].
 
 Laandschoppelijk wiest ze nog op drokke bewoning an weerskaanten van de grèenze, intied det 't oosten van de Graofschop veul heidevelden hef.<ref>Ludger Kremer (1977). ''Mundartforschung im ostniederländisch-westfälischen Grenzgebiet: eine Bestandsaufnahme (1900-1975)''. Rodolpi</ref>
 
