--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -334,7 +334,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''Iemeck''
 **''Pissmier''
 **''Sprockimm''
-*[[Sallaans]]: ''miegemp''
+*[[Sallaans]]: ''miegemp(e), empe, mier(e)''
 *[[Stellingwarfs]]:
 **''mieghimmel''
 **''mieghommel'' ([[Kop van Overiessel]])
