--- a/J.M._Legtenberg.mw
+++ b/J.M._Legtenberg.mw
@@ -1,4 +1,4 @@
-'''Johannes Maria (Johan) Legtenberg''' ([[Hertem]], den [[13 juni|13. juni]] [[1888]] – [[Hengel]], den [[11 november]] [[1958]]) was nen twentsken skryver en [[dichtkünst|dichter]]. Al wör Legtenberg jung up ne buurderye in Hertem, souwat syn heyle wydere leaven woanden hee in de stad [[Hengel]]. Warken deade hee by de Heemaf. 
+'''Johannes Maria (Johan) Legtenberg''' ([[Hertem]], den [[13 juni|13. juni]] [[1888]] – [[Hengel]], den [[11 november|11. november]] [[1958]]) was nen twentsken skryver en [[dichtkünst|dichter]]. Al wör Legtenberg jung up ne buurderye in Hertem, souwat syn heyle wydere leaven woanden hee in de stad [[Hengel]]. Warken deade hee by de Heemaf. 
 
 Mär eyn wark, ''Bloemen ôet nen Dieselkaomp'', is der van em uutekümmen, al is bekend dat der noch heyl wat van em unsorteerd in de archiven ligt. Et wark besteyt uut sou'n 120 bladsyden an stilistisk starke gedichten en artikelen oaver de [[Tweants|twentske språke]]. Dee lätsten sint vöäral ne afspegeling van syne eygene oavertügingen. Legtenberg was autodidakt, wat der up dale küm dat hee vöäral vöäle selv versün, sunder recht språkenkündige underbouwing. Hee meynden byvöärbeald dat de uutspråke van et twentsk dichtby natüürlike klanken stünd.
 
@@ -18,6 +18,7 @@ Legtenberg had en fyn gevööl vöär ritme en metrum en syne warken doot denken
 ==Uutgånde verwysing==
 *[http://www.twentsetaalbank.nl/details/personen/49.html Legtenberg syn profil up de Twentske Taalbanke]
 
+{{DEFAULTSORT:Legtenberg, J.M.}}
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Schriever in et Tweants]]
+[[Kategorie: Schriever in t Tweants]]
 [[Kategorie: Dichter]]
