--- a/Johan_Buursink.mw
+++ b/Johan_Buursink.mw
@@ -31,5 +31,6 @@ Johan Buursink was etrouwd med Jantina Wietske (Tine) Joldersma. See kreagen ver
 * [https://www.wieiswieinoverijssel.nl/zoekresultaten/p2/252-johan-buursink Wie is Wie in Overijssel. "Johan Buursink (1908 - 1993)". Peters, Tonny. Skreaven up 20 november 2014. Bekeaken up den 9. määrt 2021]
 * [http://www.twentsetaalbank.nl/details/personen/38.html Buursink syn profil up de Twentske Taalbanke]
 
+{{DEFAULTSORT:Buursink, Johan}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Schriever in t Tweants]]
