*Empty MediaWiki Message*

--- a/Jannes_Slot.mw
+++ b/Jannes_Slot.mw
@@ -13,5 +13,6 @@ Wellicht upvallend is dat Slot neet strak vaste hölde an et entersk. Hee pasden
 * Book: ''De zwijgende verdachte''  (2005)
 * Dichtbündel: ''Dagdromen'' (2010)
 
+{{DEFAULTSORT:Slot, Jannes}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Schriever in t Tweants]]
