--- a/Nedersaksische_podcasts.mw
+++ b/Nedersaksische_podcasts.mw
@@ -8,6 +8,8 @@
 
 * '''De Grunneger Podcast''' is in september 2020 begund deur [[Ingeborg Nienhuis]] en is mit op Spotify beschikber. Nienhuis is schriefster en is sinds 2016 streektaalfunctionaoris bij 't [[Bureau Groninger Taal en Cultuur]].
 
+*'''Praot Drents met mij''' is een [[Drèents|Drèentstalige]] podcast die op 3 meert 2021 begund is. In de podcast prat [[Renate Snoeijing]], directeur van 't [[Huus van de Taol]], mit Drèenten aover wat 't Drèents veur heur betiekent. De podcast wördt in de maande emeuken deur 't Huus van de Taol en [[RTV Drenthe]]. De eerste oflevering was mit William Bossong, bassist van de rockgroep [[Mooi Wark]].
+
 * '''Plattfunk – Der Podcast auf Hoch- und Plattdeutsch''' is een op 24 febrewaori 2020 estarte [[Platduuts|Platduutse]] audiopodcast op [[YouTube]], eprissenteerd deur Thorsten Börnsen en Nikos Saul. De podcast giet aover allerhaande onderwarpen. Alle keren prat iene van de beiden Platduuts en de aander [[Hoogduuts]]. Per 3 december 2020 bint der negen ofleverings.
 
 * De '''Plautdietsch PlautCast''' is een op YouTube te bekieken videopodcast in 't [[Plautdietsch]], een vörm van Nedersaksisch die veural in Noord-, Midden- en Zuud-Amerika espreuken wördt deur lu van [[Russische Mennoniet|Russisch-Mennonitische]] ofkomst. De prissentatoren bint twee mansluden, Ken en Vern, uut [[Winnipeg]], [[Canada]]. Per 28 april 2020 hebt ze 76 ofleverings emeuken.
@@ -15,13 +17,13 @@
 * De riegen '''Schölers leest Platt''' en '''SPRAAK!''' wördt deur de Schleswig-Holsteinischer Heimatbund anebeuden op audio-uutzeiingsplatform [[Soundcloud]]. De podcast SPRAAK!, begünd op 9 september 2020, dreit um Platduutse cultuur in Sleeswiek-Holstien en wördt prissenteerd deur Jan Graf.
 
 * Onder de titel '''Platt Land Kind''' zet MissLawlHey, een jonge vrouwe uut [[Oostfrieslaand]], körte humoristische filmpies in 't [[Oostfreisk Nederduutsk|Platduuts van Oostfrieslaand]] op YouTube. Vake behandelt ze plattelaandsonderwarpen of gef ze uutleg aover 't Platduuts. De Platduutstalige filmpies wördt sinds 2015 anebeuden.
-*'''Praot Drents Met Mij''' is een podcast die op 3 meert 2020 begunnen isse. In de podcast prat Renate Snoeijing mit Drenten over wat et [[Drèents]] veur hun betekent.
 
 ==Uutgaonde verwiezings==
 *[https://www.youtube.com/channel/UCJrMRbrz7uVHG0MHq5B0dPA YouTube-kenaal van Wearldspråke Podcast]
 *[https://www.watata.nl/ Webstee van WATATA]
 * [https://anchor.fm/ingeborg-nienhuis/episodes/Schoem-of-De-Voarende-Zoltkamper-van-Ingeborg-Nienhuis--oetgeven-deur-Stichten-t-Grunneger-Bouk-eki4c6/Schoem-of-De-Voarende-Zoltkamper---hoofdstuk-1-a3eah07?fbclid=IwAR1SNJ9gQ0Y99krUvPueyNbPzMhF8G_51Xtg8T7Ds5rG8lpIpc4yenhpY4k De Grunneger Podcast op Anchor.fm]
 *[https://open.spotify.com/show/45SrkFfF8hCXI9U9KiRdUU?si=FO_gxnb6SOGuDyvk-jJLrg Watata op Spotify]
+*[https://www.rtvdrenthe.nl/nieuws/168032/Nieuwe-Drentstalige-podcast-Praot-Drents-Met-Mij-trapt-af-met-William-Bossong Ofleverings van Praot Drents met mij]
 *[https://www.youtube.com/channel/UCuvynAppCOqF7aR61yT4uPQ YouTube-kenaal van Plattfunk]
 *[https://www.youtube.com/user/plautcast YouTube-kenaal van de PlautCast]
 *[https://soundcloud.com/user-836319488 Podcasts van de Schleswig-Holsteinischer Heimatbund]
