--- a/J.M._Legtenberg.mw
+++ b/J.M._Legtenberg.mw
@@ -3,17 +3,17 @@
 Mär eyn wark, ''Bloemen ôet nen Dieselkaomp'', is der van em uutekümmen, al is bekend dat der noch heyl wat van em unsorteerd in de archiven ligt. Et wark besteyt uut sou'n 120 bladsyden an stilistisk starke gedichten en artikelen oaver de [[Tweants|twentske språke]]. Dee lätsten sint vöäral ne afspegeling van syne eygene oavertügingen. Legtenberg was autodidakt, wat der up dale küm dat hee vöäral vöäle selv versün, sunder recht språkenkündige underbouwing. Hee meynden byvöärbeald dat de uutspråke van et twentsk dichtby natüürlike klanken stünd.
 
 ==Skryverye==
-In et tweyde deyl van den dartigsten jårgang van et [[Inschrien]], et blad wat de [[Van Deinse Instituut]] uutgavven, stünd te leasen dat Legtenberg döäsevul gedichten had eskreaven, al is der mär eynen bündel van em uutekümmen: ''Bloemen ôet nen Dieselkaomp''. Vöär den [[Tweyden Wearldoorlog]] an skreav Legtenberg al syn eyrste gedichten, al sat em de tyd neet med. Tydens en kort nå den oorlog hadden lüde wal wat anders an de kop as romantiske dichterye. En syne eygenwyse skryvwyse makeden et neet heyl togangelik vöär de lüde dee as der wal up satten te wachten.
+In et tweyde deyl van den dartigsten jårgang van et [[Inschrien]], et blad wat et [[Van Deinse Instituut]] uutgavven, stünd te leasen dat Legtenberg döäsevul gedichten had eskreaven, al is der mär eynen bündel van em uutekümmen: ''Bloemen ôet nen Dieselkaomp''. Vöär den [[Tweyden Wearldoorlog]] an skreav Legtenberg al syn eyrste gedichten, al sat em de tyd neet med. Tydens en kort nå den oorlog hadden lüde wal wat anders an de kop as romantiske dichterye. En syne eygenwyse skryvwyse makeden et neet heyl togangelik vöär de lüde dee as der wal up satten te wachten.
 
 Toch völ syne fynsinnige en elegante wyse van skryven by de kenners medeyne up. Nen anderen grouten name in de twentske skryverswearld, [[Johan Buursink]], skreav em in [[1949]] vul lov to dat hee neet underdeade vöär grouten as [[Johanna van Buren]]. In de [[Twentsche Courant]], den vöärlouper van de hüdige [[De Twentsche Courant Tubantia|Tubantia]], stünd ne lovende kritik, wårin Legtenberg syn wark ‘et beste wat der töt nu to in et twentsk is eskreaven’ wör enöömd.
 
-Legtenberg makeden sikselv neet populäärder döär syne eygensinnige en vöär minder ovende leasers van et [[neadersassisk]] undöärgrundelike skryvwyse. Hee volgden et [[Nederlaands|neaderlandsk]] löskes, mär was druk up leaseteykens. En woord as 'hyr' skreav hee byvöärbeald as ''hi’e''. In allerhande artikelen tüsken syne gedichten döär deade hee dee spelling en syne seenswysen uut de döke. Uut dee artikelen blikt ouk nen hang når ‘süver twentsk’ en olde segswysen en gebruken, sou as ouk [[Karel Diederik Schönfeld Wichers|Kårel van den Notåris]] uut [[Ryssen]] dee skreav.
+Legtenberg makeden sikselv neet populäärder döär syne eygensinnige en vöär minder ovende leasers van et [[neadersassisk]] undöärgrundelike skryvwyse. Up kritik dårup seade hee dat as lüde echt interesseerd warren, se dår ouk wal moide vöär doon solden. Hee volgden et [[Nederlaands|neaderlandsk]] löskes, mär was druk up leaseteykens. En woord as 'hyr' skreav hee byvöärbeald as ''hi’e''. In allerhande artikelen tüsken syne gedichten döär deade hee dee spelling en syne seenswysen uut de döke. Uut dee artikelen blikt ouk nen hang når ‘süver twentsk’ en olde segswysen en gebruken, sou as ouk [[Karel Diederik Schönfeld Wichers|Kårel van den Notåris]] uut [[Ryssen]] dee skreav.
 
 ==Styl==
-Legtenberg had en fyn gevööl vöär ritme en metrum en syne warken doot denken an laat-romantiske dichters uut et [[Düütsland]] van de [[19e eeuw|19. eywe]]. Hee löt sik stark vöärskilderen döär de natuur en syne gedichten ståt vul bloomryke språke. 
+Legtenberg had en fyn gevööl vöär ritme en metrum en syne warken doot denken an laat-romantiske dichters uut et [[Duutsland|Düütskland]] van de [[19e eeuw|19. eywe]]. Hee löt sik stark vöärskilderen döär de natuur en syne gedichten ståt vul bloomryke språke. 
 
 == Uutgaves ==
-* [[1947]]: 'Bloemen öet nen Dieselkaomp' (Dichterye en artikelen oaver språke)
+* [[1947]]: ''Bloemen öet nen Dieselkaomp'' (Dichterye en artikelen oaver språke)
 
 ==Uutgånde verwysing==
 *[http://www.twentsetaalbank.nl/details/personen/49.html Legtenberg syn profil up de Twentske Taalbanke]
