Verklaoring van 'gasthuus'

--- a/Pestengasthuus.mw
+++ b/Pestengasthuus.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Pestengasthuis Zwolle.JPG|thumb|'t Pestengasthuus]]
 't '''Pestengasthuus''' is een historisch gebouw in de binnenstad van de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]]. In de loop van de tied hef 't verscheiden functies ehad.
 
-'t Wördden zo rond 1450 dalezet as [[gasthuus]] veur mèensen die an de [[pest (zeekte)|pest]] leden. Anvaankelk stund 't buten de stadsmuren, mar det veraanderde toen de muren deur de grui van de stad verplaatst wördden.
+'t Wördden zo rond 1450 dalezet as [[gasthuus]], een soortement verpleeghuus, veur mèensen die an de [[pest (zeekte)|pest]] leden. Anvaankelk stund 't buten de stadsmuren, mar det veraanderde toen de muren deur de grui van de stad verplaatst wördden.
 
 Toen de pestepidemie veurbij was, diende 't Pestengasthuus as hospitaal veur saldaoten en as gildehuus veur 't [[gilde (beroepsgroep)|weversgilde]]. 't Pleintien veur 't gebouw het nog altied 't Weversgildeplein.
 
