--- a/Henk_Bleker.mw
+++ b/Henk_Bleker.mw
@@ -5,7 +5,7 @@
 == Zien leven ==
 Bleker gruide op in n [[Anti-Revolutionaire Partij|ARP]]-gezin en was zeun van n [[postman]]. Hai bezöcht van 1965 tot 1971 tou t [[Ubbo Emmius Lyceum]] in [[Knoal (dörp)|Knoal]] woar of hai zien [[hbs]]-a diploma hoalde. Hiernoa studeerde hai van 1971 tot 1977 tou [[politikologie]] aan [[Vrije Universiteit Amsterdam|Vrije Universiteit]] [[Amsterdam]]. Hai promoveerde juni 1984 in de rechtsgeleerdhaid aan de [[Rijksuniversiteit Groningen|Rieksakedemie in Stad]].
 
-Van 1975 tot 1976 tou was Bleker belaidsmitwaarker op t [[Ministerie van Binnenlandse Zaken en Koninkrijksrelaties]] (ministerie van boetende zoaken), en was van 1976 tot 1984 tou onderzuiksmitwaarker bie juridische fakulteit van de Rieksakedemie, van 1984 tot 1999 tou zulfstandeg organisoatsieadviseur, van 1999 tot 2009 tou [[depteerde]] van [[Grunnen (provìnzie)|provìnzie Grönnen]] en van 1 maai 2009 tot oktober 2010 dierkteur van [[RTV Noord]].
+Van 1975 tot 1976 tou was Bleker belaidsmitwaarker op t [[Ministerie van Binnenlandse Zaken en Koninkrijksrelaties]] (ministerie van boetende zoaken), en was van 1976 tot 1984 tou onderzeeduiksmitwaarker bie juridische fakulteit van de Rieksakedemie, van 1984 tot 1999 tou zulfstandeg organisoatsieadviseur, van 1999 tot 2009 tou [[depteerde]] van [[Grunnen (provìnzie)|provìnzie Grönnen]] en van 1 maai 2009 tot oktober 2010 dierkteur van [[RTV Noord]].
 
 Noadat [[Peter van Heeswijk]] vot ging uut t partaaibestuur noa de veur t CDA min verlopen [[Tweede Kamerverkiezingen 2010|Twijde Koamerverkaizens van 2010]] wuir Bleker tot tiedelk veurzitter benuimd. Hai trad ôf as lid van t partaaibestuur en het zuch nait opnij verkaisboar moakt. Op 2 oktober 2010 zat Bleker t [[CDA-formatiecongres 2010|partaaikongres van t CDA]] veur in de [[Rijnhal]] in [[Arnem|Aarnhaim]] woar de leden zuch oetluiten over t [[regeerakkoord]] van de CDA-[[Volkspartij voor Vrijheid en Democratie|VVD]]-soamenwaarken en t [[gedoogakkoord]] van de soamenwaarkenspartners en de [[gedoogsteun|gedogende]] [[Partij voor de Vrijheid|PVV]].
 
