--- a/Pèperbusse.mw
+++ b/Pèperbusse.mw
@@ -1,8 +1,8 @@
 [[Ofbeelding:Zwolle_Peperbus.jpg|thumb|De Pèperbusse eziene vanof 't Maagiesbolwark]]
 [[Ofbeelding:Zwolle Peperbus Brand 1815.PNG|thumb|De braand van 1815 op een 19de-ieuwse prent]]
-De '''Pèperbusse''', op zien [[Zwols]] uut te spreken mit de è van ''crème'',  is een [[Gotiek (bouwkunst)|laatgotische]] [[karketoren]] in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]]. 't Is de toren van de [[Basiliek van Oonze-Lieve-Vrouwe-Tenhemelopneming]]. 'De Pèperbusse' is feilijk de bijname, inegeven deur de vörm, van wat formeler de Oonze-Lieve-Vrouwetoren het.
+De '''Pèperbusse''', op zien [[Zwols]] uut te spreken mit de è van ''crème'',  is een [[Gotiek (bouwkunst)|laatgotische]] [[karketoren]] in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]]. 't Is de toren van de [[Basiliek van Oonze-Lieve-Vrouwe-Tenhemelopneming]], een karke an de [[Ossenmark (Zwolle)|Ossenmark]] in de binnenstad. 'De Pèperbusse' is feilijk de bijname, inegeven deur de vörm, van wat formeler de Oonze-Lieve-Vrouwetoren het.
 
-Mit zien 75 meter heugte kuj de toren van wiedof zien. De Pèperbusse is ien van de miest herkenbere bouwwarken van Zwolle en is iconisch veur de stad.
+Mit zien 75 meter heugte kuj de Pèperbusse van wiedof zien. 't Is ien van de miest herkenbere bouwwarken van Zwolle en is iconisch veur de stad.
 
 ==Geschiedenis==
 De Pèperbusse is gebouwd tussen 1454 en 1463. In 't begun was de toren stomp van baoven. Naodet de toren van de [[Grote of Sunte-Michaëlskarke]] in 1669 ofebraand was, wolden ze een neie representatieve toren veur Zwolle. Daorumme wördden der in 1727 een [[siepel|siepelvörmige]] kap op de Oonze-Lieve-Vrouwetoren ezet.
@@ -16,6 +16,11 @@ Van 2002 töt en mit 2005 hebt ze de Pèperbusse grondig erestaureerd, umdet der
 De Pèperbusse hef een heugte van 75 meter. Vrogger stund 't bekend as de hoogste toren van de stad, mar sinds de bouw van kantorencomplex de [[Iesseltoren]] (96 meter, opeleverd in 2006) is det niet meer zo.
 
 De Pèperbusse kuj op töt an de eerste ummegaank, op 51 meter heugte. Dit stiet geliek an 236 traptreden. De tweede ummegaank, op 65 meter, maj as pebliek niet op.
+
+==Culturele invloed==
+Naor de toren is een [[kruudkoeke]] vernuumd, de "(Zwolse) Pèperbuskoeke", mit onder meer [[sukade]], [[gember]], [[basterdsuker]] en [[hunnig]].
+
+In ''Op zien Zwols: Woordenboek van de Zwolse taal'' (Iesselakkedemie, 2009) wördt de Pèperbusse umscheven as: "toren van de Onze Lieve Vrouwenkerk op de Ossenmarkt, en de trots van elke Zwollenaar."
 
 ==Ofbieldingen==
 <gallery>
