--- a/Zwols.mw
+++ b/Zwols.mw
@@ -2,7 +2,7 @@
 't '''Zwols''' is 't [[stadsdialekt]] van de [[Oaveriessel|Aoveriesselse]] eufdstad [[Zwolle]]. 't Be-eurt töt de [[Sallaands|Sallands]]e dialektgroep, die weer deel uutmaakt van t [[Nedersaksies]].
 
 ==Kenmärken==
-Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], Iesselmudens, [[Stienwieks]], [[Dèventers]] en [[Zutfens]]). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> Et Zwols hef völle klanken die uut erekt bint. Zo wördt er völ gebruuk gemaakt van de ae wöör niet al 't Sallands dit hef. Volgens [[Johan Winkler]] praoten Zwollenaeren 'sleepende en een weinig temerig te spreken. De lange klinkers en de tweeklanken worden door hen zoo lang mogelijk uitgerekt en aangehouden.'<ref>[https://www.dbnl.org/tekst/wink007alge01_01/colofon.php Algemeen Nederduitsch en Friesch Dialecticon Deel 1 p. 377]</ref> Andere kenmärken bint et völle gebruuk van de ä (/æ(:)/ en 't gebruuk van sk. De sk klank veur sch kump niet veur op 't platteland, maar wè weer in bi'jveurbeeld [[Zutphen]]. Zwolle lig op de liende van [[ienheidsmeervold]]. Zwolle hef hier alle westelike kenmärken be-alve in et wärkwoord wean. In Zwolle is 't wi'j bint en niet wi'j binnen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:19 Over de taal van Zwolle. bekeken op 15 meei 2020.]</ref>
+Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], [[Stienwieks]], [[Dèventers]] en [[Zutfens]], maar ook in [[Iesselmuden]]<ref>{{Citeer boek|auteur=Ph Bloemhoff-de Bruijn|titel=Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972|uitgever=IJsselacademie|datum=2012|ISBN=978-90-6697-228-5}}</ref>). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> Et Zwols hef völle klanken die uut erekt bint. Zo wördt er völ gebruuk gemaakt van de ae wöör niet al 't Sallands dit hef. Volgens [[Johan Winkler]] praoten Zwollenaeren 'sleepende en een weinig temerig te spreken. De lange klinkers en de tweeklanken worden door hen zoo lang mogelijk uitgerekt en aangehouden.'<ref>[https://www.dbnl.org/tekst/wink007alge01_01/colofon.php Algemeen Nederduitsch en Friesch Dialecticon Deel 1 p. 377]</ref> Andere kenmärken bint et völle gebruuk van de ä (/æ(:)/ en 't gebruuk van sk. De sk klank veur sch kump niet veur op 't platteland, maar wè weer in bi'jveurbeeld [[Zutphen]]. Zwolle lig op de liende van [[ienheidsmeervold]]. Zwolle hef hier alle westelike kenmärken be-alve in et wärkwoord wean. In Zwolle is 't wi'j bint en niet wi'j binnen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:19 Over de taal van Zwolle. bekeken op 15 meei 2020.]</ref>
 
 Naodät de [[Verienigde Staoten van Amerika|Amerikaanse]] [[taalkunde|taalkundige]] [[William Shetter]] deur de Nederlandse taalkundige [[G.G. Kloeke]] met-enömmen wier naor Zwolle, skrif e 't ärtikel "Phonemics of the Zwolle Dialect: Synchronic and Diachronic", dät in 1958 verskeen in ''Language'', 't miest gezag-ebbende tiedskrift op 't gebied van de taalwetenskoppen.<ref>[http://www.jstor.org/pss/411275 Shetter, William Z. (1958), ''Phonemics of the Zwolle Dialect: Synchronic and Diachronic''. In ''Language'' jg. 34, nr. 1]</ref>
 
