*Empty MediaWiki Message*

--- a/Zwols.mw
+++ b/Zwols.mw
@@ -2,7 +2,9 @@
 't '''Zwols''' is 't [[stadsdialekt]] van de [[Oaveriessel|Aoveriesselse]] eufdstad [[Zwolle]]. 't Be-eurt töt de [[Sallaands|Sallands]]e dialektgroep, die weer deel uutmaakt van t [[Nedersaksies]].
 
 ==Kenmärken==
-Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], [[Stienwieks]], [[Dèventers]] en [[Zutfens]], maar ook in [[Iesselmuden]]<ref>{{Citeer boek|auteur=Ph Bloemhoff-de Bruijn|titel=Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972|uitgever=IJsselacademie|datum=2012|ISBN=978-90-6697-228-5}}</ref>). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> Et Zwols hef völle klanken die uut erekt bint. Zo wördt er völ gebruuk gemaakt van de ae wöör niet al 't Sallands dit hef. Volgens [[Johan Winkler]] praoten Zwollenaeren 'sleepende en een weinig temerig te spreken. De lange klinkers en de tweeklanken worden door hen zoo lang mogelijk uitgerekt en aangehouden.'<ref>[https://www.dbnl.org/tekst/wink007alge01_01/colofon.php Algemeen Nederduitsch en Friesch Dialecticon Deel 1 p. 377]</ref> Andere kenmärken bint et völle gebruuk van de ä (/æ(:)/ en 't gebruuk van sk. De sk klank veur sch kump niet veur op 't platteland, maar wè weer in bi'jveurbeeld [[Zutphen]]. Zwolle lig op de liende van [[ienheidsmeervold]]. Zwolle hef hier alle westelike kenmärken be-alve in et wärkwoord wean. In Zwolle is 't wi'j bint en niet wi'j binnen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:19 Over de taal van Zwolle. bekeken op 15 meei 2020.]</ref>
+Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]], [ʀ] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], [[Stienwieks]], [[Dèventers]] en [[Zutfens]], maar ook in [[Iesselmuden]]<ref name=":0">{{Citeer boek|titel=Anderhalve Eeuw Zwols Vocaalveranderingsprocessen in de periode 1838-1972|auteur=Ph Bloemhoff-de Bruijn|uitgever=IJsselacademie|datum=2012|ISBN=978-90-6697-228-5}}</ref>). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> De ao (veur een /r/ een /ɔː/) is ierveur veranderd in een öö (/œː/) of ae/ä. De /r/ nao woorden als pöörs, wöör en ärm klinkt ongeveer as een [ʁ].<ref name=":0" />
+
+Et Zwols hef völle klanken die uut erekt bint. Zo wördt er völ gebruuk gemaakt van de ae wöör niet al 't Sallands dit hef. Volgens [[Johan Winkler]] praoten Zwollenaeren 'sleepende en een weinig temerig te spreken. De lange klinkers en de tweeklanken worden door hen zoo lang mogelijk uitgerekt en aangehouden.'<ref>[https://www.dbnl.org/tekst/wink007alge01_01/colofon.php Algemeen Nederduitsch en Friesch Dialecticon Deel 1 p. 377]</ref> Andere kenmärken bint et völle gebruuk van de ä (/æ(:)/ en 't gebruuk van sk. De sk klank veur sch kump niet veur op 't platteland, maar wè weer in bi'jveurbeeld [[Zutphen]]. Zwolle lig op de liende van [[ienheidsmeervold]]. Zwolle hef hier alle westelike kenmärken be-alve in et wärkwoord wean. In Zwolle is 't wi'j bint en niet wi'j binnen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:19 Over de taal van Zwolle. bekeken op 15 meei 2020.]</ref>
 
 Naodät de [[Verienigde Staoten van Amerika|Amerikaanse]] [[taalkunde|taalkundige]] [[William Shetter]] deur de Nederlandse taalkundige [[G.G. Kloeke]] met-enömmen wier naor Zwolle, skrif e 't ärtikel "Phonemics of the Zwolle Dialect: Synchronic and Diachronic", dät in 1958 verskeen in ''Language'', 't miest gezag-ebbende tiedskrift op 't gebied van de taalwetenskoppen.<ref>[http://www.jstor.org/pss/411275 Shetter, William Z. (1958), ''Phonemics of the Zwolle Dialect: Synchronic and Diachronic''. In ''Language'' jg. 34, nr. 1]</ref>
 
@@ -18,7 +20,7 @@ De Zwolstalige stukkiesbundel ''Mien Ome Jan...'' deur [[Minke Kraijer]] (Uitgev
 ==Zwols as kultuurtaal==
 [[Ofbeelding:Op zien Zwols.jpg|thumb|right|180px|''Op zien Zwols: woordenboek van de Zwolse taal'' (2009)]]
 ===Skrieveri'je en spelling===
-'t Zwolse stadsdialekt is veural een sprèèktaal, al bint ter wel publikasies in 't Zwols. In 1908 verskeen van de and van 'Een Oud-Muzijkmeester' in de ''[[Driemaandelijkse Bladen]]'' 'Un prêutien over Zwolle van veur vieftug joar'. Döörop reageerden, ok in 't Zwols, prof. G. Kalff (1909) en volgden stukken van anderen aover 't Zwolle van vrogger. De ''Provinciale Overijsselsche en Zwolsche Courant'' namp verskeiden ärtikels uut de ''Driemaandelijkse Bladen'' aover, wat ok in die krante weer veur reaksies zörgden.<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is Wie in Overijssel: Willem Kloeke]</ref>
+'t Zwolse stadsdialekt is veural een sprèèktaal, al bint ter wel publikasies in 't Zwols. In 1908 verskeen van de and van 'Een Oud-Muzijkmeester' in de ''[[Driemaandelijkse Bladen]]'' 'Un prêutien over Zwolle van veur vieftug joar'. Dɔːrop reageerden, ok in 't Zwols, prof. G. Kalff (1909) en volgden stukken van anderen aover 't Zwolle van vrogger. De ''Provinciale Overijsselsche en Zwolsche Courant'' namp verskeiden ärtikels uut de ''Driemaandelijkse Bladen'' aover, wat ok in die krante weer veur reaksies zörgden.<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is Wie in Overijssel: Willem Kloeke]</ref>
 
 Van [[Willem Kloeke]], de va van taalkundige [[G.G. Kloeke]], kwammen in 1931 de ''Zwolsche Sketsies'' uut (Thieme). Minke Kraijer van de Dialektkringe Zwolle skrif alle wèken een kolumn in 't Zwols in uus-an-uus-kräntien ''De Peperbus'' (De Pèperbusse) en skrif ''Mien Ome Jan...'' (2007), erinneringen an aer ome, in 't Zwols en Nederlands. Van Loes van 't Haar-de Vries verskeen ok in 2007 de reseptenbundel ''In de Zwolse pot''. Veur de strèèktaal van West-Aoveriessel, wööronder 't Zwols, ef 't strèèkkenniscentrum de [[Iesselakademie]] (IJsselacademie) spellingsrichtlienden ontwörpen.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienden van de Iesselakademie veur t West-Aoveriessels en Oost-Veluws]</ref> Ok Wikipedie ef een eigen spelling (veur alle Nedersaksiese dialekten) ontwörpen, die is ok gebruukt in dit ärtikel.
 
