Kiekt bij Aoverleg

--- a/Tweantse_skeeldnaamns.mw
+++ b/Tweantse_skeeldnaamns.mw
@@ -1,6 +1,6 @@
 {{etelazie}}
 [[Ofbeelding:De Weawer.jpg|thumb|300px|Gewelversierige van De Weawer, an de Weawerstroate in [[Riesn]]]]
-'''Skeeldnaams''' zeent n vast oonderdeel van de [[Tweante|Tweantse]] [[kultuur]] en in meendere moate ook doarboeten. Völle leu in Tweante hebt nöast n achternaam nog nen ''skeeld-'' of ''bienaam'', den as vake lokaal net zo bekeand is as n achternaam. Meesttieds wörd vuur offisjele zaakn n eagenliken [[achternaam]] wal gebroekt, mear as de leu oawer en met mekoar kuiert, dan komt de bienaams of skeeldnaams um n hook. De skeeldnaams zeent bedoold um leu oet mekoar te hoolden en stamt woarskienlik oet de tied det der nog gin vaste achternaams warren. Meestal zit der nen hoop humor en fantasie achter, wat tegelieke bie de dreagers vuur skaamte kan zorgen.
+'''Skeeldnaams''' zeent n vast oonderdeel van de [[Tweante|Tweantse]] [[kultuur]]. Völle leu in Tweante hebt nöast n achternaam nog nen ''skeeld-'' of ''bienaam'', den as vake lokaal net zo bekeand is as n achternaam. Meesttieds wörd vuur offisjele zaakn n eagenliken [[achternaam]] wal gebroekt, mear as de leu oawer en met mekoar kuiert, dan komt de bienaams of skeeldnaams um n hook. De skeeldnaams zeent bedoold um leu oet mekoar te hoolden en stamt woarskienlik oet de tied det der nog gin vaste achternaams warren. Meestal zit der nen hoop humor en fantasie achter, wat tegelieke bie de dreagers vuur skaamte kan zorgen.
 
 As der ene nen meender bekeanden skeeldnaamn hef, neumt de leu der mangs n ofisjelen naam bie: ''"Den löt zik Westerkamp{{Info|vuurbeeldnaam}} skriewen"''. t Verskiensel van de skeeldnaamns keump ook in [[West-Freesland|West-Freeslaand]] vuur en vroger ok in et [[Grunnen (provìnzie)|Grönningse]] [[Oldambt (streek)|Oldambt]]. De leste joaren geet et gebroek van skeeldnaams aans stoark achteroet, duur alle import dee't in t Oldambt is komn wonn. Ook in Tweante löp et wat terugge, umdet leu et neet mear van dissen tied veendt.
 
