--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -11,7 +11,7 @@ Wiedere veurbielden bint historische [[Zwolle|Zwolse]] stadstypes as '''Bokken M
 Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schriever [[Harm Tiesing]].
 
 ====Veurname + "mit de" + beschrievend begrip====
-In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup) en '''Diene met de musse'''. Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de hundties]]''', ok wal '''Derk met den beer'''.
+In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup) en '''Diene met de musse'''. Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de hundties]]''', ok wal '''Derk met den beer'''.
 
 ====Niks as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
