--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -32,6 +32,9 @@ Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giff
 ** ''bi'jnaeme''
 ** ''scheldnaeme'' (uutspraok ''-sk'')
 ** ''schimpnaeme'' (uutspraok ''-sk'')
+* [[Twèents]]: 
+** ''bienaam''
+** ''skeeldnaam''
 |}
 
 ==Bronnen==
