*Empty MediaWiki Message*

--- a/Pèperbusse.mw
+++ b/Pèperbusse.mw
@@ -13,7 +13,7 @@ In 1815 wördden 't baovenste diel van de toren verwoest deur braand. Bij 't her
 Van 2002 töt en mit 2005 hebt ze de Pèperbusse duchtig erestaureerd, umdet der deur de jaoren hen aordig wat bouwkundige gebreken an ontstaon waren. Op 2 november 2004 wördden der vier neie [[klokke (belle)|klokken]] in 't [[carillon]] eplaatst. Mit now 51 klokken is dit ien van de grootste carillons van 't laand.
 
 ==Heugte==
-De Pèperbusse hef een heugte van 75 meter. Vrogger stund 't bekend as de hoogste toren van de stad, mar sinds de bouw van kantorencomplex de [[Iesseltoren]] (96 meter, opeleverd in 2006) is det niet meer zo.
+De Pèperbusse hef een heugte van 75 meter. Nao et instörtten van toren van de [[Sint-Michaëlskarke (Zwolle)|Sint-Michaëlskarke]] (115 töt 120 meter heuge) op 17 december [[1682]] stund 't bekend as de hoogste toren van de stad, mar sinds de bouw van kantorencomplex de [[Iesseltoren]] (96 meter, opeleverd in 2006) is det niet meer zo. 
 
 De Pèperbusse kuj op töt an de eerste ummegaank, op 51 meter heugte. Dit stiet geliek an 236 traptreden. De tweede ummegaank, op 65 meter, maj as pebliek niet op.
 
