*Empty MediaWiki Message*

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -16,6 +16,8 @@ In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't besc
 ====Niks as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
 
+Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''', zunder bezundere betiekenis, '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat). De Drèentse schriever [[Peter van der Velde]] ondertiekende zien stokkies veur Drèents letterkundig tiedschrift ''[[Roet (tiedschrift)|Roet]]'' mit Bastiaan Brobbel, een schrieversname dus die op de liest van een bijname eschoeid is.
+
 ==Nedersaksisch==
 {|
 |
@@ -30,7 +32,7 @@ Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giff
 ** ''schimpname'' (uutspraok mangs ''-sk'')
 * [[Stellingwarfs]]: 
 ** ''bi'jnaeme''
-** ''scheldnaeme'' (uutspraok ''-sk'')
+** ''schelnaeme'' (uutspraok ''-sk'')
 ** ''schimpnaeme'' (uutspraok ''-sk'')
 * [[Twèents]]: 
 ** ''bienaam''
@@ -39,6 +41,7 @@ Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giff
 
 ==Bronnen==
 *[https://www.geheugenvandrenthe.nl/bijnamen Artikel "Bijnamen" op de Digitale Drentse Encyclopedie]
+*Henk Bloemhoff (2005), ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'', Berkoop/Oldeberkoop: Stichting Stellingwarver Schrieversronte
 *Minke Kraijer, Henk Mulder, Dick Visscher en Philomène Bloemhoff-de Bruijn (2008), ''Op zien Zwols: Woordenboek van de Zwolse taal'', Kampen: Iesselakkedemie
 
 ==Kiekt ok bij==
