--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -8,7 +8,7 @@ In dizze vörm wördt een beschrievend begrip (vake in 't meervold) veur de veur
 Wiedere veurbielden bint historische [[Zwolle|Zwolse]] stadstypes as '''Bokken Miene''' (een vrouwgien det altied de geur van heur bokken mitdreug), '''Klokken Manusien''' en '''Bollen Miene''' (een veeverkoopster, waorbij Bollen verwis naor ''bolle'' (stier), mar ok mit inegeven ewest kan hebben deur heur stevige postuur).
 
 ====Veurname + beschrievend begrip====
-Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schriever [[Harm Tiesing]].
+Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schriever [[Harm Tiesing]]. De Drèentse schriever [[Peter van der Velde]] ondertiekende zien stokkies veur Drèents letterkundig tiedschrift ''[[Roet (tiedschrift)|Roet]]'' mit '''Bastiaan Brobbel''', een schrieversname die op de liest van een bijname eschoeid is (zie '''brobbel''' wiederop).
 
 ====Veurname + "mit de" + beschrievend begrip====
 In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup) en '''Diene met de musse'''. Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de (zeuven) hundties]]''', ok wal '''Derk met den beer'''.
@@ -16,7 +16,7 @@ In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't besc
 ====Niks as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
 
-Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''', zunder bezundere betiekenis, '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat). De Drèentse schriever [[Peter van der Velde]] ondertiekende zien stokkies veur Drèents letterkundig tiedschrift ''[[Roet (tiedschrift)|Roet]]'' mit Bastiaan Brobbel, een schrieversname dus die op de liest van een bijname eschoeid is.
+Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''', zunder bezundere betiekenis, '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat).
 
 ==Nedersaksisch==
 {|
