--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -16,7 +16,7 @@ In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't besc
 ====Niks as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
 
-Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''', zunder bezundere betiekenis, '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat).
+Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''' (zunder bezundere betiekenis), '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat).
 
 ==Nedersaksisch==
 {|
