--- a/Mulder.mw
+++ b/Mulder.mw
@@ -33,8 +33,11 @@ Um et eeuwnolde ambacht van möllenoar op ni-je generoasies oaver te künnen bri
 
 ==[[Nedersaksisch]]==
 *[[Achterhooks]]: ''möllenoar'', ''mulder''
-*[[Drèents]]: ''mulder'' ([[Zuudwest-Zuud-Drèents|ZWZ]])
+*[[Drèents]]:
+**''mulder''
+**''maalmulder'' ([[Zuudwest-Zuud-Drèents|ZWZ]]; ''maal'' = meel; ''maalmulder'' kan ok verwiezen naor 't insect de [[eekmulder|iekmulder]])
 *[[Grunnegs]]: ''meulder'', ''meulender''
+*[[Sallaands]]: ''mulder''
 *[[Stellingwarfs]]: ''mulder''
 *[[Tweants]]: ''mulder/muller'', ''mölder/möller'', ''mölner''
 *[[Veluws]]: ''mulder''
