--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -23,17 +23,17 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 |
 * [[Drèents]]
 ** ''bijname'', ''bijnaeme'', ''bijnaom''
-** ''scheldname'', ''scheldnaeme'', ''scheldnaom(e)'' (uutspraok mangs ''-sk'')
+** ''scheldname'', ''scheldnaeme'', ''scheldnaom(e)'' (uutspraok mangs ''sk-'')
 ** ''schempnaom''
-** ''schimpname'', ''schimpnaeme'', ''schimpnaom(e)'' (uutspraok mangs ''-sk'')
+** ''schimpname'', ''schimpnaeme'', ''schimpnaom(e)'' (uutspraok mangs ''sk-'')
 * [[Sallaans]]: 
 ** ''biename''
-** ''scheldname'' (uutspraok mangs ''-sk'')
-** ''schimpname'' (uutspraok mangs ''-sk'')
+** ''scheldname'' (uutspraok mangs ''sk-'')
+** ''schimpname'' (uutspraok mangs ''sk-'')
 * [[Stellingwarfs]]: 
 ** ''bi'jnaeme''
-** ''schelnaeme'' (uutspraok ''-sk'')
-** ''schimpnaeme'' (uutspraok ''-sk'')
+** ''schelnaeme'' (uutspraok ''sk-'')
+** ''schimpnaeme'' (uutspraok ''sk-'')
 * [[Twèents]]: 
 ** ''bienaam''
 ** ''skeeldnaam''
