/* Nedersaksisch */ Verwiezing naor Tweantse skeeldnaamns

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -36,7 +36,7 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 ** ''schimpnaeme'' (uutspraok ''sk-'')
 * [[Twèents]]: 
 ** ''bienaam''
-** ''skeeldnaam''
+** ''[[Tweantse skeeldnaamns|skeeldnaam]]''
 |}
 
 ==Bronnen==
