/* Bijnamen veur personen */ Veurname + "van" + name van partner of familie(lid)

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -10,6 +10,9 @@ Wiedere veurbielden bint historische [[Zwolle|Zwolse]] stadstypes as '''Bokken M
 ====Veurname + beschrievend begrip====
 Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schriever [[Harm Tiesing]]. De Drèentse schriever [[Peter van der Velde]] ondertiekende zien stokkies veur Drèents letterkundig tiedschrift ''[[Roet (tiedschrift)|Roet]]'' mit '''Bastiaan Brobbel''', een schrieversname die op de liest van een bijname eschoeid is (zie '''brobbel''' wiederop).
 
+====Veurname + "van" + name van partner of familie(lid)====
+Veurbielden van dizze vörm bint '''Wimken van Dientje''' veur bassist Willem Terhorst van de rockgroep [[Normaal]], en '''Meine van Meintien''' veur de [[Aoveriessel|Aoveriesselse]] törfmeter Meine Veen, die etrouwd was mit Meintje (Meintien) Bijkerk.
+
 ====Veurname + "mit de" + beschrievend begrip====
 In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup) en '''Diene met de musse'''. Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de (zeuven) hundties]]''', ok wal '''Derk met den beer'''.
 
