/* Bronnen */ Zwolsche Sketsies as bron derbij

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -46,6 +46,7 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 ==Bronnen==
 *[https://www.geheugenvandrenthe.nl/bijnamen Artikel "Bijnamen" op de Digitale Drentse Encyclopedie]
 *Henk Bloemhoff (2005), ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'', Berkoop/Oldeberkoop: Stichting Stellingwarver Schrieversronte
+*Heufdstok 'Skeldnaemen' uut W. Kloeke (1931), ''Zwolsche Sketsies'', Zutphen: W.J. Thieme & Cie
 *Minke Kraijer, Henk Mulder, Dick Visscher en Philomène Bloemhoff-de Bruijn (2008), ''Op zien Zwols: Woordenboek van de Zwolse taal'', Kampen: Iesselakkedemie
 
 ==Kiekt ok bij==
