/* Nedersaksisch */ Sallaands -näme

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -31,9 +31,9 @@ Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as w
 ** ''schempnaom''
 ** ''schimpname'', ''schimpnaeme'', ''schimpnaom(e)'' (uutspraok mangs ''sk-'')
 * [[Sallaans]]: 
-** ''biename''
-** ''scheldname'' (uutspraok mangs ''sk-'')
-** ''schimpname'' (uutspraok mangs ''sk-'')
+** ''biename'', ''bienäme''
+** ''scheldname'', ''scheldnäme'' (uutspraok mangs ''sk-'')
+** ''schimpname'', ''schimpnäme'' (uutspraok mangs ''sk-'')
 * [[Stellingwarfs]]: 
 ** ''bi'jnaeme''
 ** ''schelnaeme'' (uutspraok ''sk-'')
