Kloeke zien beschrieving van 'Jôpik met de konte'

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -17,6 +17,10 @@ Veurbielden van dizze vörm bint '''Wimken van Dientje''' veur bassist Willem Te
 ====Veurname + "mit de" + beschrievend begrip====
 In dizze vörm volgt op de veurname de toevoeging "mit/met de(n)" en dan 't beschrievende begrip. 't Begrip verwis dan oftewal naor iets wat typisch an iene is, of een attribuut det een persoon vake bij hum hef of drag. Veurbielden bint [[Zwolle|Zwolse]] stadstypes as '''Anton met de bienties''' (die op kroeme bienen leup), '''Diene met de musse''' en '''Trui met de päppen''' (''päppen'' bint de titten van een koe, een verwiezing naor Trui heur fikse börsten). Een feguur uut de [[Nedersaksische sagen en legendes|Nedersaksische mythologie]] wie zien name dizze strucuur hef, is '''[[Derk med den bear|Derk mit de (zeuven) hundties]]''', ok wal '''Derk met den beer'''.
 
+Aover de winkelier '''Jôpik met de konte''' schreef [[Willem Kloeke]] in zien ''Zwolsche Sketsies'':
+
+:'' 'k Eb 'm vaeke e-ziien, diie Jôpik; meestal liep-e in of biej zien winkel in zien boezeroen met 'n paer stèvege [[galgen|ulpzeels]] over de skolders en dan att-e 'n brooek an met piepen, diie 'n paer andenbreed te kört waeren en met 'n bôvenstuk, dät vaste twiie andenbreed te lang was, zoo dä-k maer zeggen wil, dät zien kleermaeker niiet onskuldig was an zien lilleke naeme.''
+
 ====Niks as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
 
