/* Drenthe, Kop van Oaveriessel, Sallaand */ Eppe, Narres

--- a/Nedersaksische_veurnamen.mw
+++ b/Nedersaksische_veurnamen.mw
@@ -55,6 +55,8 @@
 |-
 |Engbertien ''(v)''|| Engbertje
 |-
+|Eppe ''(m)''|| Egbert, Erwin
+|-
 |Feigien ''(v)''|| Feigje
 |-
 |Femmechie(n), Fömmechie(n) ''(v)''|| ''gien (Fries en Grunnegs:'' Femme/Femke'')''
@@ -148,6 +150,8 @@
 |Meeuwes ''(m)''|| Meeuwis, Bartholomeus
 |-
 |Meine ''(m)'', Meintien ''(v)'' (Stienwiekerlaand)|| ''gien (Fri. Meine)''
+|-
+|Narres ''(m)''|| Bernardus
 |-
 |Niesien ''(v)''|| Niesje, Agnes
 |-
