--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -26,6 +26,9 @@ Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giff
 
 Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''' (zunder bezundere betiekenis), '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat).
 
+====Bijnamen op basis van wat iene vake zeg====
+As iene bekendstiet um een bepaolde uutspraoke kan det de basis van zien bijname vörmen. In zien ''Zwolsche Sketsies'' gef [[Willem Kloeke]] de veurbielden '''Weet iej?''', '''Za-k maer zeggen''', '''Biej veurbeeld''' en '''Ma-'k bärsten'''. De leste was een harbargier die bij 't opdissen van starke verhalen vake zee: "Ma'k bärsten, as 't niiet woeur is!"
+
 ==Nedersaksisch==
 {|
 |
