/* Beschrievend begrip + (veur)name */ Veurbielden uut Kloeke

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -8,6 +8,8 @@ In dizze vörm wördt een beschrievend begrip (vake in 't meervold) veur de veur
 
 Wiedere veurbielden bint historische [[Zwolle|Zwolse]] stadstypes as '''Bokken Miene''' (een vrouwgien det altied de geur van heur bokken mitdreug), '''Klokken Manusien''' en '''Bollen Miene''' (een veeverkoopster, waorbij Bollen verwis naor ''bolle'' (stier), mar ok mit inegeven ewest kan hebben deur heur stevige postuur).
 
+In zien ''Zwolsche Sketsies'' gef [[Willem Kloeke]] de veurbielden '''Èzel-Willem''' (een stalholder die ezelinnenmelk verkocht), '''Eier-Mannus''' (handelaar in eier) en '''Skelandieke''', veur een Dieke wie heur bijname ofeleid was van de bijname van heur moeder, '''Skele-Anne'''.
+
 ====Veurname + beschrievend begrip====
 Een veurbield hiervan is '''Harm Dreum''' veur de [[Drenthe|Drèentse]] schriever [[Harm Tiesing]]. De Drèentse schriever [[Peter van der Velde]] ondertiekende zien stokkies veur Drèents letterkundig tiedschrift ''[[Roet (tiedschrift)|Roet]]'' mit '''Bastiaan Brobbel''', een schrieversname die op de liest van een bijname eschoeid is (zie '''brobbel''' wiederop).
 
