--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -40,7 +40,7 @@ As iene bekendstiet um een bepaolde uutspraoke kan det de basis van zien bijname
 ** ''schempnaom''
 ** ''schimpname'', ''schimpnaeme'', ''schimpnaom(e)'' (uutspraok mangs ''sk-'')
 * [[Sallaans]]: 
-** ''biename'', ''bienäme''
+** ''biename'', ''bienäme'' (ook ''bi'j''-)
 ** ''scheldname'', ''scheldnäme'' (uutspraok mangs ''sk-'')
 ** ''schimpname'', ''schimpnäme'' (uutspraok mangs ''sk-'')
 * [[Stellingwarfs]]: 
