/* Niks as 't beschrievend begrip */

--- a/Nedersaksische_bijnamen.mw
+++ b/Nedersaksische_bijnamen.mw
@@ -23,7 +23,7 @@ Aover de winkelier '''Jôpik met de konte''' schreef [[Willem Kloeke]] in zien '
 
 :'' 'k Eb 'm vaeke e-ziien, diie Jôpik; meestal liep-e in of biej zien winkel in zien boezeroen met 'n paer stèvege [[galgen|ulpzeels]] over de skolders en dan att-e 'n brooek an met piepen, diie 'n paer andenbreed te kört waeren en met 'n bôvenstuk, dät vaste twiie andenbreed te lang was, zoo dä-k maer zeggen wil, dät zien kleermaeker niiet onskuldig was an zien lilleke naeme.''
 
-====Niks as 't beschrievend begrip====
+====Niks aanders as 't beschrievend begrip====
 Een veurbield hiervan is''' 't Spittertien''' veur de archeoloog [[A.E. van Giffen]], bekend van 't in kaorte brengen van de [[hunebed|hunebedden]].
 
 Bepaolde woorden, mangs zunder dudelijke betiekenis, bint in vaste ummeloop as woorden die vake as bijname van personen gebruukt wördt. Veurbielden uut 't ''Stellingwarfs - Nederlands Verklarend Handwoordenboek'' bint '''bofferd''' of '''pofferd''' (zunder bezundere betiekenis), '''maelpoede''' (bijname veur een [[mulder]]) en '''brobbel''' (veur iene die brabbelt, muite hef mit de ''r'' of slecht verstaonber prat).
