--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -217,6 +217,8 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |Wichers, Wiechers, Wijchers, Wiegers|| patroniem
 |-
 |Wobben|| patroniem
+|-
+|Wolters|| patroniem
 |}
 
 ==Veluwe, Sallaand, Noord-Oaveriessel==
