--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -343,7 +343,9 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Wobben|| patroniem
 |-
-|Wolf||  de naam van een bees
+|Wolf|| de naam van een bees
+|-
+|Wolters| patroniem
 |-
 |Zunnebeld|| adresname ([[Sallaand]])
 |}
