--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -345,7 +345,7 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Wolf|| de naam van een bees
 |-
-|Wolters| patroniem
+|Wolters|| patroniem
 |-
 |Zunnebeld|| adresname ([[Sallaand]])
 |}
