--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -198,6 +198,8 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Ka(r)ssies, Kerssies|| patroniem (van Karst)
 |-
+|[[Kuper]]|| beroepsname
+|-
 |Lohues, Lohuis|| adresname
 |-
 |Luchies|| patroniem
