--- a/Grunnegs-Oostfraise_femilienoamen.mw
+++ b/Grunnegs-Oostfraise_femilienoamen.mw
@@ -1,10 +1,10 @@
-'''Grunnegs-Oostfraise femilienoamen''' binnen aachternoamen dij stammen oet [[Nederlaand|Nederlaandse]] provìnzie [[Grunnen (provìnzie)|Grunnen]] en [[Duutslaand|Duutse]] regio [[Oostfraislaand]].
+'''Grunnegs-Oostfraise femilienoamen''' binnen aachternoamen dij stammen oet [[Nederlaand|Nederlaandse]] provìnzie [[Grunnen (provìnzie)|Grunnen]] en [[Duutslaand|Duutse]] regio [[Oostfraislaand]]. De Grunnegs-Oostfraise femilienoamen kommen ook in t [[Selterlaand]] veur.
 
 ==-ma, -da==
 Grunnegs-Oostfraise femilienoamen worden veulaal kenmaarkt deur de aachtervougsels ''-ma'' en ''-da''. Dit kint man soamen mit de aachtervougsels ''-ga'' en ''-stra'' ook veul in [[Frieslaand|Westlaauwers Fraislaand]]. Dit is nait Saksisch, môr is n overbliefsel van de Fraise toal en kultuur dij ien Grunnen en Oostfraislaand ien broeken wèst het.
 
-==-ker, -tjer, -huis/hoes/huus==
-Ien de Veenkelonien en Westerwôlde kommen veul noamen veur dij ìndegen op ''-ker'' en ''-tjer''. Achternoamen dij ìndegen op ''-s'' kommen oorspronkelk oet de Veenkelonien en Westerwôlde. Ien provìnzie kommen ook veul noamen veur dij ìndegen op ''-huis''. De schreven vörm is maist Hollaands/Nederlaands, môr de spreuken vörm kan ''-hoes'' of ''-huus'' wezen. De Grunnegs-Oostfraise femilienoamen kommen ook in t [[Selterlaand]] veur.
+==-ker, -tjer, -s, -huis/hoes/huus==
+Ien de Veenkelonien en Westerwôlde kommen veul noamen veur dij ìndegen op ''-ker'' en ''-tjer''. Achternoamen dij ìndegen op ''-s'' kommen oorspronkelk oet de Veenkelonien en Westerwôlde. Ien provìnzie kommen ook veul noamen veur dij ìndegen op ''-huis''. De schreven vörm is maist Hollaands/Nederlaands, môr de spreuken vörm kan ''-hoes'' of ''-huus'' wezen.
 
 '''Let op:''' summege femilinoamen kommen óók oet aander gebieden as Grunnen en Oostfraislaand, noamelk oet [[Frieslaand|Fraislaand]], [[Drenthe|de Drìnt]] of t [[Emslaand]].
 
