--- a/Siligo.mw
+++ b/Siligo.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:450px-Siligo. Panorama da su Runaghe.JPG|200px|thumb|Siligo panorama]]
+[[Ofbeelding:450px-Siligo. Panorama da su Runaghe.JPG|200px|thumb|Kiek op Siligo]]
 '''Siligo''' is n gemainte en stad ien de [[Italiën|Italioanse]] dailstoat [[Sardinië]] en ligt in t distrikt [[Sassari]]. Siligo ligt 25 kilometer ien t zuudwesten van [[Sassari]]. De gemainte het sikkom duzend inwoner op n oppervlakte van 4,36 km².
 
 [[Kategorie:Grunnegs artikel]]
