/* Culturele invloed */ Huus-an-huuskraantien De Peperbus

--- a/Pèperbusse.mw
+++ b/Pèperbusse.mw
@@ -18,7 +18,7 @@ De Pèperbusse hef een heugte van 75 meter. Nao et instörtten van toren van de 
 De Pèperbusse kuj op töt an de eerste ummegaank, op 51 meter heugte. Dit stiet geliek an 236 traptreden. De tweede ummegaank, op 65 meter, maj as pebliek niet op.
 
 ==Culturele invloed==
-Naor de toren is een [[kruudkoeke]] vernuumd, de "(Zwolse) Pèperbuskoeke", mit onder meer [[sukade]], [[gember]], [[basterdsuker]] en [[hunnig]].
+Naor de toren is een [[kruudkoeke]] vernuumd, de "(Zwolse) Pèperbuskoeke", mit onder meer [[sukade]], [[gember]], [[basterdsuker]] en [[hunnig]]. Ok hef de toren zien name egeven an ''De Peperbus'', een huus-an-huuskraantien det alle weken vergees verspreid wördt in Zwolle en contreien.
 
 In ''Op zien Zwols: Woordenboek van de Zwolse taal'' (Iesselakkedemie, 2009) wördt de Pèperbusse umscheven as: "toren van de Onze Lieve Vrouwenkerk op de Ossenmarkt, en de trots van elke Zwollenaar."
 
