--- a/Basiliek_van_Oonze-Lieve-Vrouwe-ten-Hemelopneming.mw
+++ b/Basiliek_van_Oonze-Lieve-Vrouwe-ten-Hemelopneming.mw
@@ -2,7 +2,7 @@
 De '''Basiliek van Oonze-Lieve-Vrouwe-ten-Hemelopneming''' is een [[middeleeuwen|middelieuwse]] [[kruuskarke]] an de Ossenmark in de [[Aoveriessel|Aoveriesselse]] heufdstad [[Zwolle]]. Van oorsprong was de karke een kapel, de Oonze-Lieve-Vrouwekapel, die ondergeschikt was an de [[Grote of Sunte-Michäelskarke|Sunte-Michaëlskarke]]. De toren van de karke stiet bekend as de [[Pèperbusse]] en geldt as een symbool van Zwolle.
 
 ==Geschiedenis==
-'t Gebouw wördden in vier bedrieven dalezet. Veureerst wördden, tussen 1394 en 1399, 't koor ebouwd. Daornao wördden 't [[transept|dwarsschip]] en de oostelijke [[travee]] van 't [[schip (bouwkeunst)|schip]] ebouwd; dit was in 1417 klaor. Töt en mit 1452 stunden de warkzemheden tumig. In 1454 kwaamp 't schip gereed. Tussen 1462 en 1484 wördden de toren ebouwd, die bekendstiet as de [[Pèperbusse]].
+'t Gebouw wördden in vier bedrieven dalezet. Veureerst wördden, tussen 1394 en 1399, 't koor ebouwd. Daornao wördden 't [[transept|dwarsschip]] en de oostelijke [[travee]] van 't [[schip (bouwkeunst)|schip]] ebouwd; dit was in 1417 klaor. Töt en mit 1452 stunden de warkzemheden tumig. In 1454 kwaamp 't schip gereed. Tussen 1462 en 1484 wördden de Oonze-Lieve-Vrouwetoren ebouwd, die bekendstiet as de [[Pèperbusse]].
 
 Tussen 1580 en 1810 is de basiliek veur alderhaande niet-karkelijke doelen gebruukt. In 1809 wördden de karke an de [[Rooms-Katholieke Karke|kathelieken]] egeven. Die voerden de neudige ripperasies en anpassings uut en namen 't gebouw in 1811 in gebruuk. In 1871 wördden der [[ziedbeuke|ziedbeuken]] toeëvoegd, die in 1975 vurtehaald bint.
 
